[package]
name = "failsafe"
version = "0.3.1"
authors = ["Dmitry Galinsky <dima.exe@gmail.com>"]
description = "A circuit breaker implementation"
license = "MIT"
repository = "https://github.com/dmexe/failsafe-rs"
edition = "2018"

[dependencies]
futures = "0.1"
rand = "0.5"
parking_lot = "^0.6.4"

[dev-dependencies]
tokio = "0.1.8"
tokio-threadpool = "0.1.6"

